// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputField when invalid should display red error exclamation icon when input field value is invalid 1`] = `
<div>
  <form>
    <div
      class="field error"
    >
      <div
        class="input"
      >
        <input
          class=""
          icon="exclamation-circle"
          name="name"
          value="init value"
        />
        <i
          class="icon icon_exclamation-circle"
        />
      </div>
      <span
        class="field--error-msg"
      >
        something wrong
      </span>
    </div>
  </form>
</div>
`;

exports[`FormInputField when invalid should not display red error exclamation icon when input field value is invalid but noErrorIcon is true 1`] = `
<div>
  <form>
    <div
      class="field error"
    >
      <div
        class="input"
      >
        <input
          class=""
          name="name"
          value="init value"
        />
      </div>
      <span
        class="field--error-msg"
      >
        something wrong
      </span>
    </div>
  </form>
</div>
`;
